# photonai_conformal

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  requirements.txt  setup.cfg
.github/: rename_project.sh  template.yml
.github/workflows/: deploy_to_pypi.yml  lindandtest.yml  rename_project.yml  update_documentation.yml
api/ConformalClassifier/: index.html
api/ConformalRegressor/: index.html
docs/: index.md
docs/api/: ConformalClassifier.md  ConformalRegressor.md  DummyTransformer.md
examples/ConformalRegressor/: ConformalRegressorExample.ipynb
examples/ConformalRegressor/ConformalRegressorExample/: index.html
examples/DummyTransformer/: DummyTransformer_example.ipynb
photonai_conformal/: __init__.py  mapie_wrapper.py  photonai_conformal.json  version.py
photonai_conformal/dummy/: DummyTransformer.py  __init__.py
project_name/: __init__.py  project_name.json  version.py
project_name/dummy/: __init__.py
test/: mapie_wrapper_test.py
test/dummy_tests/: test_dummy.py
