[metadata]
name = project_name
description_file = README.md
long_description_content_type = text/markdown
author = author_name
author_email = insert_your@email
url = https://github.com//project_urlname/
keywords=
    machine learning
    deep learning
project_urls=
    Source Code = https://github.com/author_name/project_name/
    Documentation = https://author_name.github.io/project_name/
    Bug Tracker = https://github.com/author_name/project_name/issues

download_url=https://pypi.org/project/project_name/#files

[files]
packages = project_name