[metadata]
name = photonai_conformal
description_file = README.md
long_description_content_type = text/markdown
author = Jan Ernsting
author_email = j.ernsting@uni-muenster.de
url = https://github.com//photonai_conformal/
keywords=
    machine learning
    deep learning
project_urls=
    Source Code = https://github.com/wwu-mmll/photonai_conformal/
    Documentation = https://wwu-mmll.github.io/photonai_conformal/
    Bug Tracker = https://github.com/wwu-mmll/photonai_conformal/issues

download_url=https://pypi.org/project/photonai_conformal/#files

[files]
packages = photonai_conformal